Fixed lightbulb spacing and the goofy naturer of how my other page links were being ir-regul arly rendered

--- a/src/purpose_output.css
+++ b/src/purpose_output.css
@@ -1795,12 +1795,12 @@ html {
   display: grid;
 }
 
-.h-12 {
-  height: 3rem;
-}
-
 .h-32 {
   height: 8rem;
+}
+
+.h-96 {
+  height: 24rem;
 }
 
 .min-h-screen {
@@ -1932,6 +1932,11 @@ html {
 .py-1 {
   padding-top: 0.25rem;
   padding-bottom: 0.25rem;
+}
+
+.py-8 {
+  padding-top: 2rem;
+  padding-bottom: 2rem;
 }
 
 .pl-12 {
